test/libsolidity/semanticTests/errors/error_in_library_and_interface.sol
error E(uint a);
library L {
    error E(uint a, uint b);
}
interface I {
    error E(uint a, uint b, uint c);
}
contract C {
    function f() public pure {
        revert E(1);
    }
    function g() public pure {
        revert L.E(1, 2);
    }
    function h() public pure {
        revert I.E(1, 2, 3);
    }
    function encode_f() public pure returns (bytes memory) {
        return abi.encodeError(E, (1));
    }
    function encode_g() public pure returns (bytes memory) {
        return abi.encodeError(L.E, (1, 2));
    }
    function encode_h() public pure returns (bytes memory) {
        return abi.encodeError(I.E, (1, 2, 3));
    }
}
// ----
// f() -> FAILURE, hex"002ff067", hex"0000000000000000000000000000000000000000000000000000000000000001"
// g() -> FAILURE, hex"85208890", hex"0000000000000000000000000000000000000000000000000000000000000001", hex"0000000000000000000000000000000000000000000000000000000000000002"
// h() -> FAILURE, hex"7924ea7c", hex"0000000000000000000000000000000000000000000000000000000000000001", hex"0000000000000000000000000000000000000000000000000000000000000002", hex"0000000000000000000000000000000000000000000000000000000000000003"
// encode_f() -> 0x20, 0x24, hex"002ff067", hex"0000000000000000000000000000000000000000000000000000000000000001", hex"00000000000000000000000000000000000000000000000000000000"
// encode_g() -> 0x20, 0x44, hex"85208890", hex"0000000000000000000000000000000000000000000000000000000000000001", hex"0000000000000000000000000000000000000000000000000000000000000002", hex"00000000000000000000000000000000000000000000000000000000"
// encode_h() -> 0x20, 0x64, hex"7924ea7c", hex"0000000000000000000000000000000000000000000000000000000000000001", hex"0000000000000000000000000000000000000000000000000000000000000002", hex"0000000000000000000000000000000000000000000000000000000000000003", hex"00000000000000000000000000000000000000000000000000000000"
